--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,12 @@
         "php": "^7.4",
         "ext-curl": "^7.4",
         "ext-json": "^7.4",
+        "composer/composer": "^1.9|^2.0",
         "spatie/data-transfer-object": "^1.13||^2.0",
         "illuminate/support": "^7.5"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^5.0|^6.0",
         "phpunit/phpunit": "^9.0",
         "nunomaduro/larastan": "^0.5.5",
         "friendsofphp/php-cs-fixer": "^2.16"
