--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
         "ext-json": "^7.4",
         "composer/composer": "^1.9|^2.0",
         "spatie/data-transfer-object": "^1.13||^2.0",
-        "illuminate/support": "^7.5"
+        "illuminate/support": "^7.0",
+        "nunomaduro/larastan": "^0.6.4"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0",
         "phpunit/phpunit": "^9.0",
-        "nunomaduro/larastan": "^0.5.5",
         "friendsofphp/php-cs-fixer": "^2.16"
     },
     "autoload": {
