--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-json": "^7.4",
         "composer/composer": "^1.9|^2.0",
         "spatie/data-transfer-object": "^1.13||^2.0",
-        "illuminate/support": "^7.0",
+        "illuminate/support": "^7.0|^8.0",
         "nunomaduro/larastan": "^0.6.4"
     },
     "require-dev": {
