--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: Run tests
+name: run-tests
 
 on: [push]
 
@@ -16,6 +16,8 @@ jobs:
         include:
           - laravel: 7.*
             testbench: 5.*
+          - laravel: 8.*
+            testbench: 6.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - C${{ matrix.composer }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
@@ -40,6 +42,6 @@ jobs:
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "composer/composer:${{ matrix.composer }}" ${{ matrix.extra }} --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
-      
+
       - name: Execute tests
         run: vendor/bin/phpunit
