Set up laravel8

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
     "archive": {
         "exclude": [
             ".gitignore",
+            ".php_cs",
             "composer.lock",
             "vendor"
         ]
