--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "ext-curl": "^7.4",
         "ext-json": "^7.4",
         "composer/composer": "^1.9|^2.0",
