--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 name: run-tests
 
-on: [push]
+on: [ push ]
 
 jobs:
   test:
@@ -8,18 +8,17 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest]
-        php: [7.4]
-        laravel: [7.*, 8.*]
-        composer: [^1.9, ^2.0]
-        dependency-version: [prefer-lowest, prefer-stable]
+        os: [ ubuntu-latest ]
+        php: [ 7.4, 8.0 ]
+        laravel: [ 7.*, 8.* ]
+        dependency-version: [ prefer-lowest, prefer-stable ]
         include:
           - laravel: 7.*
             testbench: 5.*
           - laravel: 8.*
             testbench: 6.*
 
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - C${{ matrix.composer }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
     steps:
       - name: Checkout code
@@ -40,6 +39,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          composer remove --dev friendsofphp/php-cs-fixer --no-update --no-interaction
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "composer/composer:${{ matrix.composer }}" ${{ matrix.extra }} --no-interaction --no-update
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
 
