--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     "nunomaduro/larastan": "^0.6.4"
   },
   "require-dev": {
+    "friendsofphp/php-cs-fixer": "^3.0",
     "orchestra/testbench": "^5.0|^6.0",
-    "phpunit/phpunit": "^9.0",
-    "friendsofphp/php-cs-fixer": "^2.16"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
@@ -50,7 +50,7 @@
   "archive": {
     "exclude": [
       ".gitignore",
-      ".php_cs",
+      ".php-cs-fixer.php",
       "composer.lock",
       "vendor"
     ]
