--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,9 @@
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
-    "orchestra/testbench": "^5.0|^6.0",
-    "phpunit/phpunit": "^9.5"
+    "mockery/mockery": "^1.4",
+    "orchestra/testbench": "^6.0",
+    "phpunit/phpunit": "^9.3"
   },
   "autoload": {
     "psr-4": {
