--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
     "ext-json": "^7.4|^8.0",
     "composer/composer": "^1.9|^2.0",
     "spatie/data-transfer-object": "^1.13||^2.0",
-    "illuminate/support": "^7.0|^8.0",
-    "nunomaduro/larastan": "^0.6.4"
+    "illuminate/support": "^7.0|^8.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.0",
     "mockery/mockery": "^1.4",
+    "nunomaduro/larastan": "^0.7.12",
     "orchestra/testbench": "^6.0",
     "phpunit/phpunit": "^9.3"
   },
