chore(*): rename master branch to main

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
     }
   },
   "extra": {
+    "branch-alias": {
+      "dev-main": "dev-master"
+    },
     "laravel": {
       "providers": [
         "Soyhuce\\Docker\\ServiceProvider"
