--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,8 @@
     "illuminate/support": "^7.0|^8.0"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.0",
+    "bamarni/composer-bin-plugin": "^1.4",
     "mockery/mockery": "^1.4",
-    "nunomaduro/larastan": "^0.7.12",
     "orchestra/testbench": "^6.0",
     "phpunit/phpunit": "^9.3"
   },
@@ -57,6 +56,8 @@
     ]
   },
   "scripts": {
+    "post-install-cmd": "@composer bin all install --ansi",
+    "post-update-cmd": "@composer bin all update --ansi",
     "test": "./vendor/bin/phpunit",
     "test-coverage": "./vendor/bin/phpunit --coverage-html coverage",
     "analyse": "./vendor/bin/phpstan analyse",
