--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,17 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
-    "ext-curl": "^7.4|^8.0",
-    "ext-json": "^7.4|^8.0",
-    "composer/composer": "^1.9|^2.0",
-    "spatie/data-transfer-object": "^2.8.3||^3.2",
-    "illuminate/support": "^7.0|^8.0"
+    "php": "^8.0",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "spatie/data-transfer-object": "^3.2",
+    "illuminate/support": "^8.0|^9.0"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.4",
     "mockery/mockery": "^1.4",
-    "orchestra/testbench": "^6.0",
-    "phpunit/phpunit": "^9.3"
+    "orchestra/testbench": "^6.0|^7.0",
+    "phpunit/phpunit": "^9.5"
   },
   "autoload": {
     "psr-4": {
@@ -63,15 +62,18 @@
     "analyse": "./vendor/bin/phpstan analyse",
     "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
     "all": [
-      "@test",
       "@format",
-      "@analyse --level=max"
+      "@test",
+      "@analyse"
     ]
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "config": {
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "bamarni/composer-bin-plugin": true
+    }
   }
 }
