--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,9 +9,14 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 7.4, 8.0, 8.1 ]
-        laravel: [ 8.* ]
+        php: [ 8.0, 8.1 ]
+        laravel: [ 8.*, 9.* ]
         dependency-version: [ prefer-lowest, prefer-stable ]
+        include:
+          - laravel: 8.*
+            testbench: 6.*
+          - laravel: 9.*
+            testbench: 7.*
         exclude:
           - php: 8.1
             dependency-version: prefer-lowest
@@ -37,7 +42,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" --no-interaction --no-update --no-scripts
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update --no-scripts
           composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-scripts
       - name: Execute tests
         run: vendor/bin/phpunit
