--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,16 +10,13 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.0, 8.1 ]
-        laravel: [ 8.*, 9.* ]
+        laravel: [ 8.74, 9.0 ]
         dependency-version: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 8.*
-            testbench: 6.*
-          - laravel: 9.*
-            testbench: 7.*
-        exclude:
-          - php: 8.1
-            dependency-version: prefer-lowest
+          - laravel: 8.74
+            testbench: 6.23
+          - laravel: 9.0
+            testbench: 7.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
