--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,23 +9,24 @@ jobs:
       fail-fast: true
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.0, 8.1 ]
-        laravel: [ 8.74, 9.0 ]
+        php: [ 8.1, 8.2 ]
+        laravel: [ ^9.0 ]
         dependency-version: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 8.74
-            testbench: 6.23
           - laravel: 9.0
             testbench: 7.0
+        exclude:
+          - php: 8.2
+            dependency-version: prefer-lowest
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Cache dependencies
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/.composer/cache/files
           key: dependencies-laravel-${{ matrix.laravel }}-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
