--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^8.1",
     "ext-curl": "*",
     "ext-json": "*",
-    "spatie/data-transfer-object": "^3.2",
-    "illuminate/support": "^8.74|^9.0"
+    "spatie/data-transfer-object": "^3.9",
+    "illuminate/support": "^9.0"
   },
   "require-dev": {
     "bamarni/composer-bin-plugin": "^1.4",
     "mockery/mockery": "^1.4",
-    "orchestra/testbench": "^6.23|^7.0",
+    "orchestra/testbench": "^7.0",
     "phpunit/phpunit": "^9.5"
   },
   "autoload": {
@@ -60,7 +60,7 @@
     "test": "./vendor/bin/phpunit",
     "test-coverage": "./vendor/bin/phpunit --coverage-html coverage",
     "analyse": "./vendor/bin/phpstan analyse",
-    "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+    "format": "vendor/bin/php-cs-fixer fix",
     "all": [
       "@format",
       "@test",
