fix(.github): upgrade library minimal versions for php8.1 and php8.2

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,17 +8,17 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.1, 8.2 ]
-        laravel: [ ^9.0 ]
+        laravel: [ 9.* ]
         dependency-version: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 9.0
-            testbench: 7.0
+          - laravel: 9.*
+            testbench: 7.*
         exclude:
           - php: 8.2
             dependency-version: prefer-lowest
@@ -27,20 +27,23 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.composer/cache/files
-          key: dependencies-laravel-${{ matrix.laravel }}-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: dom, libxml, mbstring, pdo, sqlite, pdo_sqlite, intl, iconv
+          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
           coverage: none
+
+      - name: Set Minimum PHP 8.1 Versions
+        run: |
+          composer require ramsey/collection:^1.2 brick/math:^0.9.3 --no-interaction --no-update
+
+      - name: Set Minimum PHP 8.2 Versions
+        run: |
+          composer require guzzlehttp/guzzle:^7.5 guzzlehttp/psr7:^2.4 predis/predis:^2.0.2 --no-interaction --no-update
+        if: matrix.php >= 8.2
 
       - name: Install dependencies
         run: |
