--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,19 @@
     }
   ],
   "require": {
-    "php": "^8.1",
+    "php": "^8.2",
     "ext-curl": "*",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.5",
-    "illuminate/support": "^9.0 || ^10.0",
+    "illuminate/support": "^10.0",
     "spatie/laravel-data": "^3.5"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.13",
     "mockery/mockery": "^1.4",
     "nunomaduro/larastan": "^2.3",
-    "orchestra/testbench": "^7.0 || ^8.0",
-    "pestphp/pest": "^1.21 || ^2.6"
+    "orchestra/testbench": "^8.0",
+    "pestphp/pest": "^2.24 || ^2.6"
   },
   "autoload": {
     "psr-4": {
