--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,18 +13,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.1, 8.2 ]
-        laravel: [ 9.*, 10.* ]
+        php: [ 8.2, 8.3 ]
+        laravel: [ 10.* ]
         dependency-version: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 9.*
-            testbench: 7.*
           - laravel: 10.*
             testbench: 8.*
-        exclude:
-          - php: 8.2
-            laravel: 9.*
-            dependency-version: prefer-lowest
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
@@ -38,15 +32,6 @@ jobs:
           php-version: ${{ matrix.php }}
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
           coverage: none
-
-      - name: Set Minimum PHP 8.1 Versions
-        run: |
-          composer require ramsey/collection:^1.2 brick/math:^0.9.3 --no-interaction --no-update
-
-      - name: Set Minimum PHP 8.2 Versions
-        run: |
-          composer require guzzlehttp/guzzle:^7.5 guzzlehttp/psr7:^2.4 predis/predis:^2.0.2 --no-interaction --no-update
-        if: matrix.php >= 8.2
 
       - name: Install dependencies
         run: |
