chore(*): bump version

--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
   "archive": {
     "exclude": [
       ".gitignore",
-      ".php-cs-fixer.php",
+      "php_cs.dist.php",
       "composer.lock",
       "vendor"
     ]
