--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 /vendor-bin             export-ignore
 /.gitattributes         export-ignore
 /.gitignore             export-ignore
-/.php-cs-fixer.php      export-ignore
-/phpstan.neon           export-ignore
+/.php_cs.dist.php       export-ignore
+/phpstan.neon.dist      export-ignore
 /phpstan-baseline.neon  export-ignore
 /phpunit.xml            export-ignore
