--- a/composer.json
+++ b/composer.json
@@ -20,15 +20,15 @@
     "php": "^8.2",
     "ext-curl": "*",
     "ext-json": "*",
-    "guzzlehttp/guzzle": "^7.5",
-    "illuminate/support": "^10.0",
-    "spatie/laravel-data": "^3.5"
+    "guzzlehttp/guzzle": "^7.6",
+    "illuminate/support": "^10.0 || ^11.0",
+    "orchestra/testbench": "^8.0 || ^9.0",
+    "spatie/laravel-data": "^3.9 || ^4.0"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.13",
+    "friendsofphp/php-cs-fixer": "^3.6",
     "mockery/mockery": "^1.4",
-    "nunomaduro/larastan": "^2.3",
-    "orchestra/testbench": "^8.0",
+    "larastan/larastan": "^2.9.2",
     "pestphp/pest": "^2.24"
   },
   "autoload": {
@@ -41,6 +41,31 @@
       "Test\\": "tests"
     }
   },
+  "archive": {
+    "exclude": [
+      ".gitignore",
+      ".php-cs-fixer.dist.php",
+      "composer.lock",
+      "vendor"
+    ]
+  },
+  "scripts": {
+    "cs": "vendor/bin/php-cs-fixer fix",
+    "analyse": "./vendor/bin/phpstan analyse",
+    "test": "./vendor/bin/pest",
+    "test-coverage": "./vendor/bin/pest --coverage",
+    "all": [
+      "@cs",
+      "@test",
+      "@analyse"
+    ]
+  },
+  "config": {
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
+  },
   "extra": {
     "laravel": {
       "providers": [
@@ -48,33 +73,6 @@
       ]
     }
   },
-  "archive": {
-    "exclude": [
-      ".gitignore",
-      ".php-cs-fixer.php",
-      "composer.lock",
-      "vendor"
-    ]
-  },
-  "scripts": {
-    "test": "./vendor/bin/pest",
-    "test-coverage": "./vendor/bin/pest --coverage-html coverage",
-    "analyse": "./vendor/bin/phpstan analyse",
-    "format": "PHP_CS_FIXER_IGNORE_ENV=1 vendor/bin/php-cs-fixer fix",
-    "all": [
-      "@format",
-      "@test",
-      "@analyse"
-    ]
-  },
   "minimum-stability": "dev",
-  "prefer-stable": true,
-  "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "allow-plugins": {
-      "bamarni/composer-bin-plugin": true,
-      "pestphp/pest-plugin": true
-    }
-  }
+  "prefer-stable": true
 }
