--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,19 @@
     }
   ],
   "require": {
-    "php": "^8.2",
+    "php": "^8.3",
     "ext-curl": "*",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.6",
-    "illuminate/support": "^10.0 || ^11.0",
-    "spatie/laravel-data": "^3.9 || ^4.0"
+    "illuminate/support": "^11.0",
+    "spatie/laravel-data": "^4.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.6",
     "mockery/mockery": "^1.4",
-    "larastan/larastan": "^2.9.2",
-    "orchestra/testbench": "^8.0 || ^9.0",
-    "pestphp/pest": "^2.24"
+    "larastan/larastan": "^3.0",
+    "orchestra/testbench": "^9.0",
+    "pestphp/pest": "^3.0"
   },
   "autoload": {
     "psr-4": {
@@ -46,6 +46,7 @@
       ".gitignore",
       ".php-cs-fixer.dist.php",
       "composer.lock",
+      "api-docs",
       "vendor"
     ]
   },
