--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,42 +13,38 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest ]
-        php: [ 8.2, 8.3 ]
-        laravel: [ 10.*, 11.* ]
-        phpunit: [ ^10.0 ]
-        laravel-data: [ ^3.9, ^4.0 ]
+        php: [ 8.3, 8.4 ]
+        laravel: [ ^11.0 ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
-          - laravel: 10.*
-            testbench: 8.*
-          - laravel: 11.*
-            testbench: 9.*
+          - laravel: ^11.0
+            testbench: ^9.0
         exclude:
-          - laravel: 11.*
-            laravel-data: ^3.9
-    
-    name: P${{ matrix.php }} - L${{ matrix.laravel }} - PU${{ matrix.phpunit }}- DATA${{ matrix.laravel-data }}- ${{ matrix.stability }} - ${{ matrix.os }}
-    
+          - php: 8.4
+            stability: prefer-lowest
+
+    name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, bcmath, soap, intl, gd, exif, iconv, imagick, fileinfo
           coverage: none
-      
+
       - name: Setup problem matchers
         run: |
           echo "::add-matcher::${{ runner.tool_cache }}/php.json"
           echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-      
+
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "phpunit/phpunit:${{ matrix.phpunit }}"  "spatie/laravel-data:${{ matrix.laravel-data }}" --no-interaction --no-update
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
-      
+
       - name: Execute tests
         run: vendor/bin/pest
