--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,13 +14,16 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.3, 8.4 ]
-        laravel: [ ^11.0 ]
+        laravel: [ ^11.0, ^12.0 ]
         stability: [ prefer-lowest, prefer-stable ]
         include:
           - laravel: ^11.0
             testbench: ^9.0
+          - laravel: ^12.0
+            testbench: ^10.0
         exclude:
           - php: 8.4
+            laravel: ^11.0
             stability: prefer-lowest
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
