--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
     "ext-curl": "*",
     "ext-json": "*",
     "guzzlehttp/guzzle": "^7.6",
-    "illuminate/support": "^11.0",
+    "illuminate/support": "^11.0|^12.0",
     "spatie/laravel-data": "^4.0"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.6",
     "mockery/mockery": "^1.4",
     "larastan/larastan": "^3.0",
-    "orchestra/testbench": "^9.0",
+    "orchestra/testbench": "^9.0|^10.0",
     "pestphp/pest": "^3.0"
   },
   "autoload": {
